--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    <style>
+        h1{
+            color: white;
+            
+        }
+    </style>
 </head>
 <body>
     <h1 style="background-color:violet;text-align:center">Welcome to Home page</h1>
