--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
     <style>
         h1{
             color: white;
-            
+
         }
     </style>
 </head>
 <body>
     <h1 style="background-color:violet;text-align:center">Welcome to Home page</h1>
+    <div class="form">
+        <h2>Login</h2>
+        Name: <input type="text" name="user" placeholder="Enter User name"><br>
+        Password: <input type="password" name="pass" placeholder="Enter password"><br>
+        <input type="submit" value="submit">
+
+    </div>
+    
+
 </body>
 </html>
