--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
             color: white;
 
         }
+        .form{
+            background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
+        }
     </style>
 </head>
 <body>
