--- a/index.html
+++ b/index.html
@@ -12,16 +12,21 @@
         }
         .form{
             background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
+            border:2px solid black;
+            border-radius: 8px;
+            padding:8px;
         }
     </style>
 </head>
 <body>
     <h1 style="background-color:violet;text-align:center">Welcome to Home page</h1>
     <div class="form">
+    <center>
         <h2>Login</h2>
         Name: <input type="text" name="user" placeholder="Enter User name"><br>
         Password: <input type="password" name="pass" placeholder="Enter password"><br>
         <input type="submit" value="submit">
+    </center>
 
     </div>
     
