--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
             border:2px solid black;
             border-radius: 8px;
             padding:8px;
+            width:50%;
+            margin-left: auto;
+            margin-right: auto;
+            
+        }
+        #btn{
+            border: 2px solid #ff3700;
+            background-color: #ff3700;
+            border-radius: 6px;
+            color:white;
+            width:150px;
+        }
+        #btn:hover{
+            background-color: aliceblue;
+            color:#ff3700;
         }
     </style>
 </head>
@@ -22,10 +37,12 @@
     <h1 style="background-color:violet;text-align:center">Welcome to Home page</h1>
     <div class="form">
     <center>
-        <h2>Login</h2>
-        Name: <input type="text" name="user" placeholder="Enter User name"><br>
-        Password: <input type="password" name="pass" placeholder="Enter password"><br>
-        <input type="submit" value="submit">
+        <table>
+        <tr><h2 style="color:white;">Login</h2></tr>
+        <tr>Name &nbsp; &nbsp;&nbsp;: <input type="text" name="user" placeholder="Enter User name"></tr><br>
+        <tr>Password: <input type="password" name="pass" placeholder="Enter password"><br></tr>
+       <br><tr><input id="btn" type="submit" value="submit"></tr>
+    </table>
     </center>
 
     </div>
