--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <table>
         <tr><h2 style="color:white;">Login</h2></tr>
         <tr>Name &nbsp; &nbsp;&nbsp;: <input type="text" name="user" placeholder="Enter User name"></tr><br>
-        <tr>Password: <input type="password" name="pass" placeholder="Enter password"><br></tr>
+        <br><tr>Password: <input type="password" name="pass" placeholder="Enter password"><br></tr>
        <br><tr><input id="btn" type="submit" value="submit"></tr>
     </table>
     </center>
